--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-      <p>
-        Stremebase was a successful PoC database engine used for researching novel data structures for databases.
-     </p>
       <section id="main_content" class="inner">
+        
+     <p>
+      Stremebase is a PoC database engine written in Java 8. It was used for researching novel data structures.
+     </p>
         
 <p>Depends on : <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">Java 8 JDK</a></p>
 <p>Latest version : <a class="jar_download_link" href="https://github.com/olliNiinivaara/Stremebase-source/blob/master/stremebase_0_7_1.jar?raw=true">stremebase_0_7_1.jar</a></p>
